system/services/bases/networking/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: damascus
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      service.beta.kubernetes.io/azure-dns-label-name: poshcode
  listeners:
  # We always need to keep an HTTP listener on port 80 for HTTP-01 challenges to work with cert-manager.
  # it has to allow all namespaces and not specify a hostname
  - name: http-01-solver
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
  - name: https-tld
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: poshcode.com # hostname override in layers
    tls:
      mode: Terminate
      certificateRefs:
      - name: tld-tls
  - name: https-otel
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: otel # full hostname override in layers
    tls:
      mode: Terminate
      certificateRefs:
      - name: otel-tls
  - name: https-dex
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: dex # full hostname override in layer
    tls:
      mode: Terminate
      certificateRefs:
      - name: dex-tls
  - name: https-grafana
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: grafana # full hostname override in laye
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-tls
  - name: https-prometheus
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: prometheus # full hostname override in laye
    tls:
      mode: Terminate
      certificateRefs:
      - name: prometheus-tls
  - name: https-alerts
    allowedRoutes:
      namespaces:
        from: All
    protocol: HTTPS
    port: 443
    hostname: alerts.poshcode.com # full hostname override in laye
    tls:
      mode: Terminate
      certificateRefs:
      - name: alerts-tls
